kubernetes/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axiomnode-ingress
  labels:
    app.kubernetes.io/part-of: axiomnode
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.axiomnode.com
        - backoffice.axiomnode.com
      secretName: axiomnode-tls
  rules:
    - host: api.axiomnode.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 7005
    - host: backoffice.axiomnode.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backoffice
                port:
                  number: 80
